app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import 'rails_bootstrap_forms';

/* mixins, variables, etc. */

$grayMediumLight: #eaeaea;
$grayLighter:     #eee;
$blueMedium:      #3F73A1;
$white:           #FFF;

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/* universal */

html {
  overflow-y: scroll;
}

body {

}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

img.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.pad-top {
  padding-top: 60px;
}
.center {
  text-align: center;
  h1 {
    margin-bottom: 10px;
  }
}

.white-no-wrap {
  white-space: nowrap;
}

#errorMessage {
  color: #f00;
  font-size: 1.5em;
}

.white-bg {
  background-color: #FFF;
} 

.no-border {
  border: 0;
}

.top-pading-1em {
  padding-top: 1.5em;
}
  
/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $gray-light;
}

p {
 /* font-size: 1.1em; 
  line-height: 1.7em; */
}

.signin_drop_min_width {
  min-width: 120px;
}
.pad_width {
  padding: 0 15px 0 15px;
}

.info_box {
  padding: 15px;
  background-color: $brand-info;
  border: 1px solid $gray-lighter;
  margin: 0 0 10px 0;
  border-radius: 10px;
#  font-size: 1.2em;
  font-weight: bold;  
}

/* header */

#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: white;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: bold;
  line-height: 1;
  &:hover {
    color: white;
    text-decoration: none;
  }
}

/* footer */

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid $grayMediumLight;
  color: $gray-light;
  a {
    color: $gray;
    &:hover {
      color: $gray-darker;
    }
  }
  small {
    float: left;
  }
  ul {
    float: right;
    list-style: none;
    li {
      float: left;
      margin-left: 10px;
    }
  }
}

/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

/* sidebar */

aside {
  section {
    padding: 10px 0;
    border-top: 1px solid $gray-lighter;
    &:first-child {
      border: 0;
      padding-top: 0;
    }
    span {
      display: block;
      margin-bottom: 3px;
      line-height: 1;
    }
    h1 {
      font-size: 1.4em;
      text-align: left;
      letter-spacing: -1px;
      margin-bottom: 3px;
      margin-top: 0px;
    }
  }
}

/* forms */

input[type="submit"] {
  width: auto;
}

input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
 /* width: 100%; */
  margin-bottom: 15px;
  @include box_sizing;
}

input {
  height: auto !important;
}

#error_explanation {
  color: #f00;
  ul {
    list-style: none;
    margin: 0 0 18px 0;
  }
}

.field_with_errors {
  @extend .form-group;
  @extend .has-error;
}

.field_with_errors:nth-of-type(1) {
  margin-bottom: 2px;
}

.auto-width {
  width: auto;
}

.radio_button_list {
  margin-left: 10px;
}

/* Users index */

.users {
  list-style: none;
  margin: 0;
  li {
    overflow: auto;
    padding: 10px 0;
    border-top: 1px solid $gray-lighter;
    &:last-child {
      border-bottom: 1px solid $gray-lighter;
    }
  }
}


/* Avatar and Gravatar */
.gravatar {
  float: left;
  margin-right: 10px;
}

.avatar-image {
  float: left;
  margin-right: 10px;
}
.gravatar-change-form {
  margin: 10px;
}
.avatar-change-form {
  margin: 10px;
}
.current-avatar {
  margin-bottom: 4px;
  span.form-title {
    font-weight: bold;
  }
}

.user-profile-avatar {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#user-avatar-none-field {
  display: none;
}
#user-avatar-gravatar-field {
  display: none;
}

/* personal profile */

.display-heading {
  font-size: 1.2em;
  font-weight: bold;
}

.display-group-heading {
  font-size: 2em;
  font-weight: bold;
}

.edit-profile-link {
  font-size: .75em;
  font-weight: normal;
}

div.answer-display-block {
  border-top: 1px solid $gray-lighter;
  padding-bottom: 1em;
  padding-top:    1em;
}

/* authentication */

.auth_link_holder {
  float:left;
  margin: 0 10px;
  p {
    text-align: center;
  }
}

.authentication_label {
  display: inline-block;
  background-color: #EEE;
  border: solid 1px #999;
  border-radius: 6px;
  padding: 5px 10px;
#  position: relative;
   img {
     float: left;
     margin: 5px;
     display: block;
     vertical-align: middle;
   }
  .provider {
    float: left;
    margin: 5px 10px 5px 5px;
  }
  .dismiss {
    display: inline-block;
    float: left;
    text-align: center;
    vertical-align: middle;
 #   position: absolute;
 #   top: 3px;
 #   right: 3px;
 #   color: #333;
 #   padding: 2px 4px;
    font-size: 12px;
  }
}

.authentication {
  float: left;
  background-color: #EEE;
  border: solid 1px #999;
  padding: 5px 10px;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  position: relative;
  margin-right: 10px;
}

.authentication .remove {
  text-decoration: none;
  position: absolute;
  top: 3px;
  right: 3px;
  color: #333;
  padding: 2px 4px;
  font-size: 10px;
}

.authentication .remove:hover {
  color: #FFF;
  background-color: #777;
  -moz-border-radius: 7px;
  -webkit-border-radius: 7px;
}

.authentication img {
  float: left;
}

.authentication .provider, .authentication .uid {
  margin-left: 38px;
  margin-right: 20px;
}

.authentication .provider {
  font-weight: bold;
}

/* Event Page */

#event-group-list li{
    list-style-type: none;
}

.event-icon {
  float: left;
}

.event-data {
  float: left;
  margin-left: 10px;
}

#when, #where {
  margin-top: 1.5em;
}

.rsvp-list {
  text-align: center;
  vertical-align: bottom;
/*   display: flex;
  flex-flow: row wrap; */
}

.rsvp-list li{
/*     flex: 1 1 100%; */
    list-style-type: none;
    display: inline;
    padding-right: 5px;
    float: left;
    height: 200px;  
    width: 90px;
    padding-bottom: 10px;
    padding-top: 10px;
    margin-right: 15px;
    font-size: 20px;
    min-width: 100px;
}

.rsvp-list li.add_height {
  height: 220px;
}
.rsvp-list img{
  vertical-align:bottom;
  height: 80px;
}
#event-start, .bold {
  font-weight: bold;
}
.yes-no-header {
  font-size: 1.4em;
  font-weight: bold;
}

/* old event list */

.event .panel-body {
  background: #BBDEFB;
  border: 1px solid #448AFF;
  padding:0;
  margin:0;
  height:86px;
}
.event .panel-body > div {
  padding: 0 10px;
}
.event .panel-body .rsvp {
  border-left: none;
  padding: 0;
  text-align: center;
  position: relative;
  background: #64B5F6;
  color: white;
  height: 100%;
}

.event .rsvp > div {
  font-size: 12px;
  position: absolute;
  bottom: 0;
  background: #42A5F5;
  width: 100%;
}

.event .rsvp i {
  font-size: 2em;
  display: block;
  position:relative;
  top:17%;
  margin-bottom:5px;
}
.event .rsvp i:last-of-type{
    font-size:1.5em;
    margin-top:-23px;
}

.event .rsvp span {
  cursor: pointer;
  padding: 0 5px;
  margin: 5px 0;
  width:45%;
}
.event .rsvp span:first-of-type{
  border-right: 1px solid white;
}
.event .rsvp span:hover{
  color: #1565C0;
}

.event .info{
  font-size: 28px;
}

.event .info > div, .event .info > ul{
  font-size: 12px;
}

.event .author .profile-image {
  position: absolute;
  background: white;
  padding: 3px;
  width: 5em;
  border-radius: 50%;
  border: 1px solid #CCC;
  box-sizing: content-box;
  z-index: 1;
  top:4px;
}

.event .author img {
    width:100%;
    border-radius:50%;
}

/* end old event list */

/* event list */

.event-list-item {
  background: $grayLighter;
  .date {
    border-right: 1px solid white;
    font-weight: bold;
    .day, .month {
      font-size: 2em;
    }
    .time-span {
      font-size: 0.8em;
    }
  }
  .info {
    .title {
      font-size: 1.5em;
      font-weight: bold;
    }
  }
  .hosted-by {
    font-weight: bold;
    margin-left: auto;
    margin-right: auto;
    div.host-title {
      font-size: 1.1em;
      text-align: center;
      padding: 5px;
    }
    div.user-avatar img.avatar-image {
      float: none;
      display: block;
      margin-left: auto;
      margin-right: auto;
    }
    div.profile-name div.user-name {
      text-align: center;
    }
  }
  
}


/* Calendar */

.calendar tr td {
  width: 14.28571428%;  
}

.calendar ul {
  padding: 0;
  list-style: none;
}
.calendar  tbody td .day .day-head {
  font-size: 1.1em;
  font-weight: bold;
}

.calendar  tbody td .day {
  height: auto;
  min-height: 100px;
}

li.cal-item {
  background: $blueMedium;
  color: $white;
  line-height: 1.1;
  padding: 0.2em;
  font-size: 1em;
  text-align: left;
  margin: 2px 0 0;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  a.url {
    color:#EDF7FF;
  }
}
li span.cal-item-time {
  color:#EDF7FF;
}

/* Overwrites */
.nav-tabs a {
  background: #90CAF9;
  color: white;
}
.info .nav-tabs li.active a {
  background-color: #448AFF;
  color: white;
}
.info .nav-tabs li:hover a, .info .nav-tabs li.active:hover a {
  background: #00BCD4;
  color: white;
}
.tab-content {
  background: white;
  border-radius: 0 10px;
  padding: 10px;
}
#event-group-list li {
  font-size: 1.3em;
  font-weight: bold;
}

.event-header {
  font-size: 1.2em;
  font-weight: bold;
}

.event-sub-header {
  font-size: 1em;
}

/* event popover */
.popover-div {
  display: inline;
  color: #428bca;
  &:hover, &:focus {
    color: #2a6496;
    text-decoration: underline;
  }
  &:focus {
    outline: thin dotted;
    outline-offset: -2px;
  }
}

.popover {
    max-width: 100%; 
}


/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) { 
    .event .panel-body {
        height:158px;
    }
    
    .event .rsvp {
        min-height:100%;
    }
    
    .event .rsvp i {
        font-size:4em;
        top:5%;
    }
    
    .event .panel-body .author {
      position: relative;
      color: #2196F3;
      padding:10px;
      height:100%;
    }
    .event .profile {
      position: relative;
      z-index: 0;
      border-left: 2px solid white;
      top: -5px;
      padding-left: 55px;
      height: 100%;
      left: 10%;
    }
    .event .profile strong {
      display: block;
      color: white;
      font:20px bold 'Fredoka One', serif;
      -webkit-text-stroke-width: .6px;
      -webkit-text-stroke-color: #448AFF;
      margin-bottom: 5px;
    }
    .event .author .profile i {
      color:  #448AFF;
      padding-left: 0;
    }
    .event .profile .links {
      position: absolute;
      bottom: 0;
    }
    .event .profile article {
        padding:0 41px 0 0;
    }
    .event .author .profile i:hover{
      color:  #00BCD4;
    }
    .event .author .profile-image {
      position: absolute;
      background: white;
      padding: 3px;
      width: 30%;
      border-radius: 50%;
      border: 1px solid #CCC;
      box-sizing: content-box;
      z-index: 1;
      top:13px;
    }
    .event .author img {
      width: 100%;
      border-radius: 50%;
    }
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) { 
    .event .profile {
      left: 17%;
    }
}

